deploy/aws-ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Servidor dedicado para o desafio de votacao; sem acesso ao banco pela Internet.
Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
  SubnetId:
    Type: AWS::EC2::Subnet::Id
  UbuntuArmImage:
    Type: AWS::EC2::Image::Id
    Description: Ubuntu 24.04 LTS ARM64 oficial da Canonical na regiao escolhida.
  AdminCidr:
    Type: String
    Description: IPv4 publico do administrador, limitado a um endereco /32.
    AllowedPattern: '^([0-9]{1,3}\.){3}[0-9]{1,3}/32$'
Resources:
  SshKey:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: !Sub '${AWS::StackName}-key'
      KeyType: ed25519
      Tags:
        - Key: Project
          Value: DesafioVotacao
  Firewall:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: HTTP e HTTPS publicos; SSH somente para o administrador.
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AdminCidr
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Project
          Value: DesafioVotacao
  Server:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref UbuntuArmImage
      InstanceType: t4g.small
      KeyName: !Ref SshKey
      CreditSpecification:
        CPUCredits: standard
      MetadataOptions:
        HttpTokens: required
        HttpPutResponseHopLimit: 1
      NetworkInterfaces:
        - DeviceIndex: '0'
          AssociatePublicIpAddress: false
          SubnetId: !Ref SubnetId
          GroupSet:
            - !Ref Firewall
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeType: gp3
            VolumeSize: 20
            Encrypted: true
            DeleteOnTermination: true
      Tags:
        - Key: Name
          Value: pautas-desafio
        - Key: Project
          Value: DesafioVotacao
        - Key: Environment
          Value: assessment
  Address:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Project
          Value: DesafioVotacao
  AddressAssociation:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt Address.AllocationId
      InstanceId: !Ref Server
Outputs:
  InstanceId:
    Value: !Ref Server
  PublicIp:
    Value: !Ref Address
  SecurityGroupId:
    Value: !Ref Firewall
  PrivateKeyParameter:
    Description: Caminho da chave privada no SSM; ler apenas para administrar este servidor.
    Value: !Sub '/ec2/keypair/${SshKey.KeyPairId}'
